-'Company' table query and result set refactored to DAO + Model

--- a/RODEC.Controller/RODEC.Controller.csproj
+++ b/RODEC.Controller/RODEC.Controller.csproj
@@ -44,6 +44,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\RODEC.DAO\RODEC.DAO.csproj">
+      <Project>{A503ED5C-C595-4B14-9A1B-81FB96B5403C}</Project>
+      <Name>RODEC.DAO</Name>
+    </ProjectReference>
     <ProjectReference Include="..\RODEC.Model\RODEC.Model.csproj">
       <Project>{279ef28c-788c-4348-bd97-b106b3885250}</Project>
       <Name>RODEC.Model</Name>
