--- a/RODEC.DAO/RODEC.DAO.csproj
+++ b/RODEC.DAO/RODEC.DAO.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompanyDAO.cs" />
+    <Compile Include="FiscalItemDAO.cs" />
     <Compile Include="ItemDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
