-Connection bug fixed

--- a/RODEC.View/RODEC.View.csproj
+++ b/RODEC.View/RODEC.View.csproj
@@ -53,7 +53,10 @@
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\CompanyLogVM.cs" />
+    <Compile Include="ViewModel\MonitorVM.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -93,6 +96,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RODEC.Controller\RODEC.Controller.csproj">
+      <Project>{982AEF7B-BC2E-4D71-889A-E030BBAC265C}</Project>
+      <Name>RODEC.Controller</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
