--- a/RODEC.View/RODEC.View.csproj
+++ b/RODEC.View/RODEC.View.csproj
@@ -55,8 +55,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="ViewModel\CompanyLogVM.cs" />
-    <Compile Include="ViewModel\MonitorVM.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -101,6 +99,10 @@
     <ProjectReference Include="..\RODEC.Controller\RODEC.Controller.csproj">
       <Project>{982AEF7B-BC2E-4D71-889A-E030BBAC265C}</Project>
       <Name>RODEC.Controller</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RODEC.ViewModel\RODEC.ViewModel.csproj">
+      <Project>{18F038EB-390E-4FBF-99E1-5D665C6F0CBC}</Project>
+      <Name>RODEC.ViewModel</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
